Changes for 00 Connect Sample
Fixed indentation to spaces.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ typings/
 02 webpack/00 Intro/00 BoilerPlate/bundle.js
 02 webpack/00 Intro/01 Import/bundle.js
 02 webpack/00 Intro/02 Server/bundle.js
+.editorconfig
